<resources>
    <string name="app_name">AmiMedicos</string>
    <string name="auth">Basic QW1pQXBwQWRtaW5pc3RyYWRvcjoqQW1pQWRtaW5BcHAyMDE4Kg==</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_play_services_key">AIzaSyBYYLPA1JrY4XVhMFt9EUL6ZxAQ5gS4ngs</string>

    <!-- Login UI Texts -->
    <string name="Cedula">Cédula</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Ingresar">Ingresar</string>

    <!-- servicios asignados UI Texts -->
    <string name="serviciosasignados">Servicios Asignados</string>
    <string name="nombrec">Nombre Cliente</string>
    <string name="numcel">320 569 89 56</string>
    <string name="noservicios">Usted no tiene servicios asignados</string>

    <!-- Mapa UI Texts -->
    <string name="llegada">Llegaste al punto de servico</string>

    <!-- servicio actual UI Texts -->
    <string name="servicioactual">Servicio Actual</string>
    <string name="nombrecliente">Nombre Cliente</string>
    <string name="urgencia">Urgencia</string>
    <string name="finalizar">Finalizar Servicio</string>

    <!-- observaciones UI Texts -->
    <string name="concuerdas">¿Concuerdas con el Triage asignado?</string>
    <string name="obs">Observaciones</string>
    <string name="enviar">Enviar</string>


</resources>
