<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marti.amimedicos.ui.ServicioActualUI"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/silver"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicioactual"
            android:textColor="@color/white"
            android:textSize="@dimen/smallWordSize"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombrecliente"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/mediumtitleSize"
            android:layout_marginTop="@dimen/margin30dp"/>

        <TextView
            android:id="@+id/clasifServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urgencia"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mediumtitleSize"
            android:layout_marginTop="@dimen/margin30dp"/>

        <Button
            android:id="@+id/finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalizar"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="@style/CuadradoRedondeadoRojo"
            android:layout_marginStart="@dimen/margin30dp"
            android:layout_marginEnd="@dimen/margin30dp"
            android:layout_marginTop="@dimen/margin40dp"/>

    </LinearLayout>

</LinearLayout>
