<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marti.amimedicos.ui.ServiciosAsignadosUI"
    android:orientation="vertical"
    android:background="@color/somdras1"
    android:clickable="true"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviciosasignados"
            android:textColor="@color/white"
            android:textSize="@dimen/smallWordSize"
            android:layout_marginStart="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <ImageView
            android:layout_width="@dimen/margin30dp"
            android:layout_height="@dimen/margin30dp"
            android:background="@drawable/icono_contacto"
            android:layout_alignParentEnd="true"
            />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/noservicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noservicios"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtitleSize"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/servicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin40dp"
        android:visibility="visible"
        >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin60dp"
        android:background="@color/white"
        android:layout_marginStart="@dimen/margin20dp"
        android:layout_marginEnd="@dimen/margin20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/margin50dp"
                android:layout_height="@dimen/margin50dp"
                style="@style/CuadradoRedondeadoRojo"
                android:visibility="invisible"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrec"
                    android:textSize="@dimen/smallWordSize"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numcel"
                    android:drawableStart="@drawable/icono_celular_med"
                    />

            </LinearLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>



            <Button
                android:layout_width="@dimen/margin50dp"
                android:layout_height="@dimen/margin50dp"
                style="@style/CuadradoRedondeadoRojo"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin5dp"
                />

    </RelativeLayout>

</LinearLayout>
