<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.marti.amimedicos.ui.LogInUI"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorPrimary"
    >

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="top|center"
        android:background="@drawable/corazon_blanco_logo2"
        android:layout_marginTop="@dimen/margin40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/layoutPadLeft"
        android:layout_marginEnd="@dimen/layoutPadRight"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/identificacionWrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSize45"
            style="@style/Widget.Design.TextInputLayout.CustomRedField"
            app:errorEnabled="true"
            app:hintEnabled="false"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/identificacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Cedula"
                android:textColorHint="@color/white"
                android:textSize="@dimen/smallWordSize"
                android:background="@null"
                android:drawablePadding="@dimen/margin5dp"
                android:paddingStart="@dimen/margin5dp"
                android:paddingEnd="@dimen/margin5dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:maxLength="15"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contrasenaWrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSize45"
            style="@style/Widget.Design.TextInputLayout.CustomRedField"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/margin10dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Contrasena"
                android:textColorHint="@color/white"
                android:textSize="@dimen/smallWordSize"
                android:background="@null"
                android:drawablePadding="@dimen/margin5dp"
                android:paddingStart="@dimen/margin5dp"
                android:paddingEnd="@dimen/margin5dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:maxLength="15"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/ingresar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSize45"
            android:text="@string/Ingresar"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin20dp"
            style="@style/CustomWhiteButton"
            android:textAllCaps="false"
            />


    </LinearLayout>

</FrameLayout>
